Add columns, add unique word count, format css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <label for="paragraphInput">Enter paragraph text
                 <textarea placeholder="Enter paragraph text to sort here..."id="paragraphInput" cols="15" rows="10"></textarea>
             </label>
-            <button onclick="organizeText()">Organize</button>
+            <div id="info"></div>
+            <button onclick="organizeText()">Create list</button>
         </div>
         <ol id='wordList'></ol>
     </main>
